--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,9 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Projet DEVOPS</title>
 </head>
 <body>
-
+<p> Relaisé par  : KOUHOU - DIOP - MEKOUAR</p>
 </body>
 </html>
