--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <title>Projet DEVOPS</title>
 </head>
 <body>
-<p> Relaisé par  : KOUHOU - DIOP - MEKOUAR</p>
+
+<p style="color: black"> Relaisé par  : KOUHOU - DIOP - MEKOUAR</p>
 </body>
 </html>
