--- a/src/main/resources/templates/suppliers.html
+++ b/src/main/resources/templates/suppliers.html
@@ -18,10 +18,9 @@
                          <th>ID</th><th>Name</th><th>Email</th>
                      </tr>
                      <tr>
-                         <td>--</td>
-                         <td>--</td>
-                         <td>--</td>
-                         <td>--</td>
+                         <td>-1-</td>
+                         <td>-KOUHOU-</td>
+                         <td>-medko24@gmail.com-</td>
                      </tr>
                  </table>
              </div>
